<resources>
    <string name="app_name">final_project</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="income_1">收入：</string>
    <string name="expenditure_1">支出：</string>
    <string name="keep">記賬</string>
    <string name="chart">分析</string>
    <string name="illustrate_add_income">輸入一筆收入吧！</string>
    <string name="illustrate_add_expenditure">輸入一筆支出吧！</string>
    <string name="expenditure_food">食物</string>
    <string name="expenditure_drinks">飲料</string>
    <string name="expenditure_transport">交通</string>
    <string name="expenditure_medical">醫療</string>
    <string name="expenditure_entertainment">娛樂</string>
    <string name="expenditure_others">其他</string>
    <string name="expenditure_food_1">食物：</string>
    <string name="expenditure_drinks_1">飲料：</string>
    <string name="expenditure_transport_1">交通：</string>
    <string name="expenditure_medical_1">醫療：</string>
    <string name="expenditure_entertainment_1">娛樂：</string>
    <string name="expenditure_others_1">其他：</string>
    <string name="type">類型：</string>
    <string name="input_money">金額：</string>
    <string name="input_money_1">輸入金額</string>
    <string name="sure">確認</string>
    <string name="income_salary">薪水</string>
    <string name="income_salary_1">薪水：</string>
    <string name="income_lucky">撿到的</string>
    <string name="income_others">其他</string>
    <string name="income_pocket_money">零用錢</string>
    <string name="income_lucky_1">撿到的：</string>
    <string name="income_others_1">其他：</string>
    <string name="income_pocket_money_1">零用錢：</string>
    <string name="cancel">返回</string>
    <string name="input_note">備註：</string>
    <string name="NO">無</string>
    <string name="delete_Q">要刪除這筆資料嗎？</string>
    <string name="yes">是</string>
    <string name="no">沒有</string>
    <string name="chart_inf">您的錢都去哪了？</string>
</resources>