<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_income">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:gravity="center"
        android:text="@string/illustrate_add_income"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:text="@string/type"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton_salary"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:checked="true"
            android:text="@string/income_salary"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton_pocket"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/income_pocket_money"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton_lucky"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/income_lucky"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton_others"
            android:layout_width="match_parent"
            android:layout_marginLeft="15sp"
            android:layout_height="wrap_content"
            android:text="@string/income_others"
            android:textSize="25sp" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/money_show"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:text="@string/input_money"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/input_money"
            android:layout_width="250sp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/input_money_1"
            android:inputType="none|number"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note_0"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:text="@string/input_note"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/expenditure_note_0"
            android:layout_width="250sp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:layout_gravity="right"
            android:layout_margin="20sp"
            android:onClick="back"
            android:text="@string/cancel"
            android:textSize="25sp" />

        <Button
            android:id="@+id/sure"
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:layout_gravity="right"
            android:layout_margin="20sp"
            android:onClick="sure"
            android:text="@string/sure"
            android:textSize="25sp" />


    </LinearLayout>

</LinearLayout>