<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_show"
            android:layout_width="200sp"
            android:layout_height="80sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="bottom"
            android:text="2023/01/7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/addIncome"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="bottom"
            android:layout_marginRight="10sp"
            android:onClick="add_income"
            android:text="@string/income"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addExpenditure"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="bottom"
            android:onClick="add_expenditure"
            android:text="@string/expenditure"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/income_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/income"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/expenditure_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/expenditure"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_layout"
        android:layout_width="match_parent"
        android:layout_height="476dp">

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="500sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_keep"
            android:layout_width="185dp"
            android:layout_height="66dp"
            android:layout_margin="10sp"
            android:onClick="keep"
            android:text="@string/keep"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_chart"
            android:layout_width="185dp"
            android:layout_height="66dp"
            android:layout_margin="10sp"
            android:onClick="chart"
            android:text="@string/chart"
            android:textSize="25sp" />
    </LinearLayout>


</LinearLayout>