<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/mark"
        android:layout_width="110dp"
        android:layout_height="118dp"
        android:gravity="center"
        android:text="支出/收入"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="70sp"
                android:layout_height="35sp"
                android:gravity="center_vertical"
                android:text="@string/type"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/type"
                android:layout_width="230sp"
                android:layout_height="35sp"
                android:gravity="center_vertical"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="70sp"
                android:layout_height="35sp"
                android:gravity="center_vertical"
                android:text="@string/input_money"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/money"
                android:layout_width="230sp"
                android:layout_height="35sp"
                android:gravity="center_vertical"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="70sp"
                android:layout_height="35sp"
                android:gravity="center_vertical"
                android:text="@string/input_note"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/note"
                android:layout_width="230sp"
                android:layout_height="35sp"
                android:gravity="center_vertical"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>